Add tweets/templates/base.html + extend block

--- a/tweets/templates/tweets/home.html
+++ b/tweets/templates/tweets/home.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>TweetMe2</title>
-    </head>
-    <body>
-        <p>We are trying to creat TweetMe2</p>
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block head_title %} 
+This is Amazing Block Title!!! =^_^=
+{% endblock %}
+
+{% block content %}
+Welcome to TweetMe2
+{% endblock content %}
