--- a/tweets/templates/tweets/home.html
+++ b/tweets/templates/tweets/home.html
@@ -6,4 +6,22 @@ This is Amazing Block Title!!! =^_^=
 
 {% block content %}
 Welcome to TweetMe2
+
+<script>
+    const xhr = new XMLHttpRequest() // xhr = SomeClass()
+    const method = 'GET' // POST
+    const url = "/tweets"    
+    const responseType = "json"
+
+    xhr.responseType = responseType
+    xhr.open(method, url)
+    xhr.onload = function() {
+        // console.log(xhr.response)
+        const serverResponse = xhr.response
+        var listedItems = serverResponse.response
+        console.log(listedItems)
+    }
+    xhr.send()
+</script>
+
 {% endblock content %}
