--- a/tweets/templates/tweets/home.html
+++ b/tweets/templates/tweets/home.html
@@ -8,17 +8,17 @@ This is Amazing Block Title!!! =^_^=
 Welcome to TweetMe2
 
 <div id = 'tweets'>
-    Replace me
+    Loading.... Please wait. <br> Hm... You might enjoy some tea :)
 </div>
 
 <script>
     const tweetsElement = document.getElementById('tweets') // We will get html element
-    tweetsElement.innerHTML = "Loading.... Please wait. <br> Hm... You might enjoy some tea :)" // we will set html in that element
+    // tweetsElement.innerHTML = "Loading.... Please wait. <br> Hm... You might enjoy some tea :)" // we will set html in that element
     
-    var el1 = "<h2> Hi there Monday </h2>"
-    var el2 = "<h2> Hi there Lundi </h2>"
-    var el3 = "<h2> Hi there Lunedi </h2>"
-    tweetsElement.innerHTML = el1 + el2 + el3
+    // var el1 = "<h2> Hi there Monday </h2>"
+    // var el2 = "<h2> Hi there Lundi </h2>"
+    // var el3 = "<h2> Hi there Lunedi </h2>"
+    // tweetsElement.innerHTML = el1 + el2 + el3
 
     const xhr = new XMLHttpRequest() // xhr = SomeClass()
     const method = 'GET' // POST
@@ -30,8 +30,17 @@ Welcome to TweetMe2
     xhr.onload = function() {
         // console.log(xhr.response)
         const serverResponse = xhr.response
-        var listedItems = serverResponse.response
-        console.log(listedItems)
+        const listedItems = serverResponse.response
+        var finalTweetStr = ""
+        var i; 
+        for (i=0; i<listedItems.length; i++) {
+            console.log(i)
+            console.log(listedItems[i]) 
+            var currentItem = "<div class='mb-4'>" + listedItems[i].id + " - " + listedItems[i].content + "</div>"
+                finalTweetStr += currentItem
+        }
+        tweetsElement.innerHTML = finalTweetStr
+        // console.log(listedItems)
     }
     xhr.send()
 </script>
