--- a/tweets/templates/tweets/home.html
+++ b/tweets/templates/tweets/home.html
@@ -25,6 +25,11 @@ Welcome to TweetMe2
     const url = "/tweets"    
     const responseType = "json"
 
+    function formatTweetElement(tweet) {
+        var formattedTweet = "<div class='mb-4 tweet' id='tweet-" + tweet.id + "'>" + tweet.content + "</div>"
+        return formattedTweet
+    }
+    
     xhr.responseType = responseType
     xhr.open(method, url)
     xhr.onload = function() {
@@ -34,10 +39,11 @@ Welcome to TweetMe2
         var finalTweetStr = ""
         var i; 
         for (i=0; i<listedItems.length; i++) {
-            console.log(i)
-            console.log(listedItems[i]) 
-            var currentItem = "<div class='mb-4'>" + listedItems[i].id + " - " + listedItems[i].content + "</div>"
-                finalTweetStr += currentItem
+            // console.log(i)
+            // console.log(listedItems[i]) 
+            var tweetObj = listedItems[i]
+            var currentItem = formatTweetElement(tweetObj)
+            finalTweetStr += currentItem
         }
         tweetsElement.innerHTML = finalTweetStr
         // console.log(listedItems)
