--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -5,7 +5,20 @@
 {% block content %}
 Welcome to TweetMe2
 
+<div id="tweets">
+    Replace me
+</div>
+
 <script>
+    const tweetsElement = document.getElementById('tweets')
+    tweetsElement.innerHTML = 'Loading...'
+
+    var el1 = "<h1>Hi 1 </h1>"
+    var el2 = "<h1>Hi 2 </h1>"
+    var el3 = "<h1>Hi 3 </h1>"
+
+    tweetsElement.innerHTML = el1 + el2 + el3
+
     const xhr = new XMLHttpRequest() // xhr = SomeClass()
     const method = 'GET' // 'POST'
     const url = '/tweets'
