Add replacement into <div id='tweets'> with JS

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -10,8 +10,8 @@ Welcome to TweetMe2
 </div>
 
 <script>
-    const tweetsElement = document.getElementById('tweets')
-    tweetsElement.innerHTML = 'Loading...'
+    const tweetsElement = document.getElementById('tweets') // get an html element
+    tweetsElement.innerHTML = 'Loading...' // set new html in that element
 
     var el1 = "<h1>Hi 1 </h1>"
     var el2 = "<h1>Hi 2 </h1>"
