Add initial footer.html and nawbar.html

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -18,6 +18,7 @@ Welcome to TweetMe2
 
     function handleDidLike(tweet_id, currentCount){
         console.log(tweet_id, currentCount)
+        return
     }
 
     function likeBtn(tweet){
