--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <title>TweetMe2 {% block head_title %} {% endblock head_title %}</title>
   </head>
   <body>
+    {% include "components/navbar.html" %}
     {% block content %}
     {% endblock content %}
 
