Styling navigation bar to base page

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -3,9 +3,12 @@
 {% block head_title %} Amazing {% endblock head_title %}
 
 {% block content %}
-Welcome to TweetMe2
-
-<div id="tweets">
+<div class="text-center">
+    <div class="col>">
+        <h2> Welcome to TweetMe2 </h2>
+    </div>
+</div>
+<div class="row" id="tweets">
     Loading...
 </div>
 
@@ -27,7 +30,7 @@ Welcome to TweetMe2
     }
 
     function formatTweetElement(tweet){
-        var formattedTweet = "<div class='mb-4 tweet' id='tweet-" + tweet.id
+        var formattedTweet = "<div class='col-12 border-bottom py-3 mb-4 tweet' id='tweet-" + tweet.id
          + "'><p>" + tweet.content +
          "</p><div class='btn-group'>" + likeBtn(tweet) + "</div></div>"
         return formattedTweet
