--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,17 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <style>
+      .bg-tweetme {
+          background-color: #32cc00cc!important;
+      }
+    </style>
 
     <title>TweetMe2 {% block head_title %} {% endblock head_title %}</title>
   </head>
   <body>
     {% include "components/navbar.html" %}
-    <div class="container-fluid">
+    <div class="container">
 
     {% block content %}
     {% endblock content %}
