--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -8,6 +8,18 @@
         <h2> Welcome to TweetMe2 </h2>
     </div>
 </div>
+
+<div class="row mb-4">
+    <div class="col-md-4 mx-auto col-10">
+        <form class="form" method="POST" action="/create-tweet">
+            {% csrf_token %}
+            <input type="hidden" value="/" name="next"/>
+            <textarea class="form-control" name="content" placeholder="Your tweet goes here"></textarea>
+            <button type="submit" class="btn btn-primary"> Tweet </button>
+        </form>
+    </div>
+</div>
+
 <div class="row" id="tweets">
     Loading...
 </div>
