--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -11,7 +11,7 @@
 
 <div class="row mb-4">
     <div class="col-md-4 mx-auto col-10">
-        <form class="form" method="POST" action="/create-tweet">
+        <form class="form" id="tweet-create-form" method="POST" action="/create-tweet">
             {% csrf_token %}
             <input type="hidden" value="/" name="next"/>
             <textarea class="form-control" name="content" placeholder="Your tweet goes here"></textarea>
@@ -25,6 +25,9 @@
 </div>
 
 <script>
+    const tweetCreateFormEl = document.getElementById("tweet-create-form")
+    tweetCreateFormEl.addEventListener("submit")
+
     const tweetsEl = document.getElementById('tweets') // get an html element
 
     function loadTweets(tweetsElement){
