Add handleTweetCreateFormDidSubmit via JavaScript

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -25,8 +25,14 @@
 </div>
 
 <script>
+
+    function handleTweetCreateFormDidSubmit(event) {
+        event.preventDefault()
+        console.log(event)
+    }
+
     const tweetCreateFormEl = document.getElementById("tweet-create-form")
-    tweetCreateFormEl.addEventListener("submit")
+    tweetCreateFormEl.addEventListener("submit", handleTweetCreateFormDidSubmit)
 
     const tweetsEl = document.getElementById('tweets') // get an html element
 
