Check if request.is_ajax() @tweet_create_view

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -39,7 +39,7 @@
 
         xhr.onload = function() {
             const serverResponse = xhr.response
-            // console.log(serverResponse)
+            console.log(xhr.status, serverResponse)
             const tweetsEl = document.getElementById('tweets')
             loadTweets(tweetsEl)
         }
