--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -33,17 +33,20 @@
         const url = myForm.getAttribute("action")
         const method = myForm.getAttribute("method")
         const xhr = new XMLHttpRequest()
+        const responseType = 'json'
+
+        xhr.responseType = responseType
         xhr.open(method, url)
         xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest")
         xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
 
         xhr.onload = function() {
             if (xhr.status === 201) {
-                const newTweet = xhr.response
-                const newTweetJson = JSON.parse(newTweet)
+                const newTweetJson = xhr.response
                 console.log(newTweetJson.likes)
                 const newTweetEl = formatTweetElement(newTweetJson)
                 console.log(newTweetEl)
+                tweetsContainerEl.prepend(newTweetEl)
             }
         }
         xhr.send(myFormData)
