--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -43,10 +43,9 @@
         xhr.onload = function() {
             if (xhr.status === 201) {
                 const newTweetJson = xhr.response
-                console.log(newTweetJson.likes)
                 const newTweetEl = formatTweetElement(newTweetJson)
-                console.log(newTweetEl)
-                tweetsContainerEl.prepend(newTweetEl)
+                const ogHtml = tweetsContainerEl.innerHTML
+                tweetsContainerEl.innerHTML = newTweetEl + ogHtml
             }
         }
         xhr.send(myFormData)
