Add myForm.reset() @ xhr.onload = function()

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -46,6 +46,7 @@
                 const newTweetEl = formatTweetElement(newTweetJson)
                 const ogHtml = tweetsContainerEl.innerHTML
                 tweetsContainerEl.innerHTML = newTweetEl + ogHtml
+                myForm.reset()
             }
         }
         xhr.send(myFormData)
