--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -47,7 +47,15 @@
                 const ogHtml = tweetsContainerEl.innerHTML
                 tweetsContainerEl.innerHTML = newTweetEl + ogHtml
                 myForm.reset() // to clean the window after tweet
+            } else if (xhr.status===400){
+                const errorJson = xhr.response
+                console.log(errorJson)
+            } else if (xhr.status===500){
+                alert('There was a server error')
             }
+        }
+        xhr.onerror = function(){
+            alert("An error occured... Please try again later")
         }
         xhr.send(myFormData)
     }
