--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -13,6 +13,7 @@
     <div class="col-md-4 mx-auto col-10">
         <form class="form" id="tweet-create-form" method="POST" action="/create-tweet">
             {% csrf_token %}
+            <div class="d-none alert alert-danger" id="tweet-create-form-error"></div>
             <input type="hidden" value="/" name="next"/>
             <textarea required='required' class="form-control" name="content" placeholder="Your tweet goes here"></textarea>
             <button type="submit" class="btn btn-primary"> Tweet </button>
@@ -25,6 +26,17 @@
 </div>
 
 <script>
+    function handleTweetFormError(msg, display){
+        var myErrorDiv = document.getElementById("tweet-create-form-error")
+        if (display === true) {
+            // show error
+            myErrorDiv.setAttribute("class", "d-block alert alert-danger")
+            myErrorDiv.innerText = msg
+        } else {
+            // hide error
+            myErrorDiv.setAttribute("class", "d-none alert alert-danger")
+        }
+    }
 
     function handleTweetCreateFormDidSubmit(event) {
         event.preventDefault()
@@ -50,8 +62,22 @@
             } else if (xhr.status===400){
                 const errorJson = xhr.response
                 console.log(errorJson)
+                const contentError = errorJson.content
+                let contentErrorMsg;
+                if (contentError) {
+                    contentErrorMsg = contentError[0]
+                    if (contentErrorMsg){
+                        handleTweetFormError(contentErrorMsg, true)
+                    } else {
+                        alert('An error occured. Please try again')
+                    }
+                } else {
+                    alert('An error occured. Please try again')
+                }
+                console.log(contentErrorMsg)
+
             } else if (xhr.status===500){
-                alert('There was a server error')
+                alert('There was a server error. Please try again')
             }
         }
         xhr.onerror = function(){
