--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -26,6 +26,23 @@
 </div>
 
 <script>
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+
     function handleTweetFormError(msg, display){
         var myErrorDiv = document.getElementById("tweet-create-form-error")
         if (display === true) {
@@ -121,35 +138,53 @@
 
     loadTweets(tweetsContainerEl)
 
-    function handleDidLike(tweet_id, currentCount){
+    function handleTweetActionBtn(tweet_id, currentCount, action){
         console.log(tweet_id, currentCount)
         const url = '/api/tweets/action'
         const method = 'POST'
         const data = JSON.stringify({
             id: tweet_id,
-            action: 'like'
+            action: action
         })
         const xhr = new XMLHttpRequest()
+        const csrftoken = getCookie('csrftoken');
         xhr.open(method, url)
         xhr.setRequestHeader('Content-Type', 'application/json')
         xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest")
         xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
+        xhr.setRequestHeader('X-CSRFToken', csrftoken)
         xhr.onload = function(){
-            console.log(xhr.status, xhr.response)
+            loadTweets(tweetsContainerEl)
         }
         xhr.send(data)
         return
     }
 
     function likeBtn(tweet){
-        return "<button class='btn btn-primary btn-sm' onclick=handleDidLike(" +
-        tweet.id + "," + tweet.likes + ")>" + tweet.likes + " Like Me </button>"
+        return "<button class='btn btn-primary btn-sm' onclick=handleTweetActionBtn(" +
+        tweet.id + "," + tweet.likes + ",'like')>" + tweet.likes + " Like Me </button>"
+    }
+
+
+    function UnlikeBtn(tweet){
+        return "<button class='btn btn-outline-primary btn-sm' onclick=handleTweetActionBtn(" +
+        tweet.id + "," + tweet.likes + ",'unlike')>Unlike</button>"
+    }
+
+
+    function RetweetBtn(tweet){
+        return "<button class='btn btn-outline-success btn-sm' onclick=handleTweetActionBtn(" +
+        tweet.id + "," + tweet.likes + ",'retweet')>ReTweet Me</button>"
     }
 
     function formatTweetElement(tweet){
         var formattedTweet = "<div class='col-12 col-md-10 mx-auto border-bottom rounded py-3 mb-4 tweet' id='tweet-" + tweet.id
          + "'><p>" + tweet.content +
-         "</p><div class='btn-group'>" + likeBtn(tweet) + "</div></div>"
+         "</p><div class='btn-group'>" 
+         + likeBtn(tweet) 
+         + UnlikeBtn(tweet) 
+         + RetweetBtn(tweet)
+         + "</div></div>"
         return formattedTweet
     }
 
