Render React App via Any Django Template

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -3,6 +3,9 @@
 {% block head_title %} Amazing {% endblock head_title %}
 
 {% block content %}
+
+<div id="'tweetme-2"></div>
+
 <div class="text-center" >
     <div class="col>">
         <h2> Welcome to TweetMe2 </h2>
