--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -4,15 +4,15 @@
 
 {% block content %}
 
-<div id="'tweetme-2"></div>
+<div id="tweetme-2"></div>
 
-<div class="text-center" >
+<div class="text-center d-none" >
     <div class="col>">
         <h2> Welcome to TweetMe2 </h2>
     </div>
 </div>
 
-<div class="row mb-4">
+<div class="row mb-4 d-none">
     <div class="col-md-4 mx-auto col-10">
         <form class="form" id="tweet-create-form" method="POST" action="/create-tweet">
             {% csrf_token %}
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<div class="row" id="tweets">
+<div class="row d-none" id="tweets">
     Loading...
 </div>
 
