--- a/templates/tweets/detail.html
+++ b/templates/tweets/detail.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block content %}
+
+<div
+        class='tweetme-2-detail'
+        data-tweet-id="{{ tweetId }}">
+</div>
+
+{% endblock content %}
