--- a/templates/tweets/list.html
+++ b/templates/tweets/list.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+
+<div id="tweetme-2"></div>
+
+{% endblock content %}
