--- a/templates/tweets/detail.html
+++ b/templates/tweets/detail.html
@@ -4,7 +4,7 @@
 
 <div
         class='tweetme-2-detail'
-        data-tweet-id="{{ tweetId }}">
+        data-tweet-id="{{ tweet_id }}">
 </div>
 
 {% endblock content %}
