--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -7,7 +7,7 @@
 <div id="tweetme-2"></div>
 
 <div class="text-center d-none" >
-    <div class="col>">
+    <div class="col">
         <h2> Welcome to TweetMe2 </h2>
     </div>
 </div>
